[tool.poetry]
name = "e621-dl"
version = "2.0.2"
description = "A simple and fast e621 post/pool downloader"
authors = ["HMiku8338 <hmiku8338@gmail.com>"]
license = "MIT"
keywords = ["furry", "yiff", "e621", "e621-api", "e621-downloader"]
readme = "README.md"
repository = "https://github.com/hmiku8338/e621-dl"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.0.1"
requests = "^2.27.1"
typer = "^0.4.0"
e621-temp = "^0.0.2"
click = "<8.1.0"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.scripts]
e6 = 'e621_dl:app'

[tool.isort]
py_version = 37
profile = "black"
src_paths = ["e621"]

[tool.black]
target-version = ['py37']
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
