[tool.poetry]
name = "e621-dl"
version = "2.2.4"
description = "A simple and fast e621 post/pool downloader"
authors = ["HMiku8338 <hmiku8338@gmail.com>"]
license = "MIT"
keywords = ["furry", "yiff", "e621", "api", "booru", "downloader"]
readme = "README.md"
repository = "https://github.com/hmiku8338/e621-dl"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
typer = { extras = ["all"], version = "^0.7.0" }
e621-stable = "^1.0.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pre-commit = "^2.19.0"

[tool.poetry.scripts]
e6 = 'e621_dl:app'

[tool.isort]
profile = "black"
py_version = 37
src_paths = ["e621_dl.py"]

[tool.black]
target-version = ['py37']
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
